k8s/argo/argo-workflows/argo-workflows-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#   name: argo-workflows-ingress
#   namespace: argo
# spec:
#   tls:
#     - hosts:
#         - "argo-workflows.cluster.local"
#       secretName: argo-workflows-tls
#   rules:
#     - host: "argo-workflows.cluster.local"
#       http:
#         paths:
#           - path: /(argo-workflows\/.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: argo-server
#                 port:
#                   number: 80
#           - path: /(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: argo-server
#                 port:
#                   number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argo-workflows-ingress
#   namespace: argo
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
# spec:
#   rules:
#   - host: argotest.tk
#     http:
#       paths:
#       - path: /argo-workflowss
#         pathType: Prefix
#         backend:
#           service:
#             name: argo-server
#             port:
#               number: 2746
#   tls:
#   - hosts:
#     - argotest.tk
#     secretName: api-tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - hosts:
    - workflows.argotest.tk
    secretName: argo-workflows-tls
  rules:
  - host: workflows.argotest.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
